[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/themes/LineEdit.tres" type="Theme" id=1]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TextEdit.gd" type="Script" id=2]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TagEdit.gd" type="Script" id=3]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/NumberEdit.gd" type="Script" id=4]
[ext_resource path="res://src/create/shared/warningPopUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/themes/BtnTheme.tres" type="Theme" id=7]
[ext_resource path="res://src/create/shared/IngredientFluidTemplate.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 20
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.1, 0.9, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 6 )
width = 256

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.1, 0.9, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 256

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 251.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 251.0
rect_min_size = Vector2( 64, 20 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 1024.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="identifier_label" type="Label" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
margin_right = 256.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 20 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "[MODID]:[IDENTIFIER]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modid" type="LineEdit" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
margin_left = 260.0
margin_right = 604.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
script = ExtResource( 2 )
warnPopUp = ExtResource( 5 )

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
margin_left = 608.0
margin_right = 612.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="identifier" type="LineEdit" parent="HBoxContainer/VBoxContainer/Control/HBoxContainer"]
margin_left = 616.0
margin_right = 960.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
script = ExtResource( 3 )
warnPopUp = ExtResource( 5 )

[node name="separator2" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 960.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 5
texture = SubResource( 10 )
expand = true

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 960.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Control2/HBoxContainer"]
margin_right = 256.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 20 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "Amount:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount" type="LineEdit" parent="HBoxContainer/VBoxContainer/Control2/HBoxContainer"]
margin_left = 260.0
margin_right = 960.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 9 )
script = ExtResource( 4 )
warnPopUp = ExtResource( 5 )

[node name="separator3" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 960.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 5
texture = SubResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 960.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="identifier_label" type="Label" parent="HBoxContainer/VBoxContainer/Control3/HBoxContainer"]
margin_right = 256.0
margin_bottom = 153.0
rect_min_size = Vector2( 256, 20 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "NBT data
Leave empty for no nbt data"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/Control3/HBoxContainer"]
margin_left = 260.0
margin_right = 960.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 960.0
margin_bottom = 251.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 28.0
rect_min_size = Vector2( 256, 0 )

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 960.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 26 )
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "Load  default potion template"

[node name="separator" type="TextureRect" parent="."]
margin_top = 255.0
margin_right = 1024.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 5
texture = SubResource( 12 )
expand = true

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/Control/HBoxContainer/modid" to="HBoxContainer/VBoxContainer/Control/HBoxContainer/modid" method="textChanged"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/Control/HBoxContainer/identifier" to="HBoxContainer/VBoxContainer/Control/HBoxContainer/identifier" method="textChanged"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/Control2/HBoxContainer/amount" to="HBoxContainer/VBoxContainer/Control2/HBoxContainer/amount" method="textChanged"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="load_default_potion_nbt"]
